build/yamls/flow-aggregator.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: flow-aggregator
  name: flow-aggregator
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: flow-aggregator
  name: flow-aggregator
  namespace: flow-aggregator
spec:
  ports:
  - name: ipfix-udp
    port: 4739
    protocol: UDP
    targetPort: 4739
  - name: ipfix-tcp
    port: 4739
    protocol: TCP
    targetPort: 4739
  selector:
    app: flow-aggregator
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: flow-aggregator
  name: flow-aggregator
  namespace: flow-aggregator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flow-aggregator
  template:
    metadata:
      labels:
        app: flow-aggregator
    spec:
      containers:
      - args:
        - --config
        - /etc/flow-aggregator/flow-aggregator.conf
        - --logtostderr=false
        - --log_dir=/var/log/antrea/flow-aggregator
        - --alsologtostderr
        - --log_file_max_size=100
        - --log_file_max_num=4
        - --v=0
        # image: projects.registry.vmware.com/antrea/flow-aggregator:latest
        image: hanlan/flow-aggregator:v1.0.0
        imagePullPolicy: Always
        name: flow-aggregator
        ports:
        - containerPort: 4739
        volumeMounts:
        - mountPath: /etc/flow-aggregator/flow-aggregator.conf
          name: flow-aggregator-config
          readOnly: true
          subPath: flow-aggregator.conf
        - mountPath: /var/log/antrea/flow-aggregator
          name: host-var-log-antrea-flow-aggregator
      nodeSelector:
        kubernetes.io/arch: amd64
        kubernetes.io/os: linux
      serviceAccountName: flow-aggregator
      volumes:
      - configMap:
          name: flow-aggregator-configmap-hf78268hm6
        name: flow-aggregator-config
      - hostPath:
          path: /var/log/antrea/flow-aggregator
          type: DirectoryOrCreate
        name: host-var-log-antrea-flow-aggregator
